--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "cors": "^2.8.5",
+    "mongoose": "^6.1.4",
+    "morgan": "^1.10.0",
     "next": "12.0.7",
+    "next-auth": "^4.0.6",
+    "next-connect": "^0.11.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
