--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "cors": "^2.8.5",
+    "daisyui": "^1.20.0",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "next": "12.0.7",
