--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "daisyui": "^1.20.0",
     "mongoose": "^6.1.4",
@@ -16,9 +17,11 @@
     "next": "12.0.7",
     "next-auth": "^4.0.6",
     "next-connect": "^0.11.0",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
