--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.22.0",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
+    "cookies-next": "^2.0.3",
     "daisyui": "^1.20.0",
     "mongoose": "^6.1.4",
-    "morgan": "^1.10.0",
-    "next": "12.0.7",
-    "next-auth": "^4.0.6",
-    "next-connect": "^0.11.0",
+    "next": "^12.0.7",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "recoil": "^0.5.2",
+    "stripe": "^8.195.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
